--- a/lemmy-translations/translations/ru.json
+++ b/lemmy-translations/translations/ru.json
@@ -3,7 +3,7 @@
     "remove_post": "Удалить Пост",
     "no_posts": "Нет Постов.",
     "create_a_post": "Создать пост",
-    "create_post": "Создать Пост",
+    "create_post": "Создать пост",
     "number_of_posts_0": "{{formattedCount}} пост",
     "number_of_posts_1": "{{formattedCount}} поста",
     "number_of_posts_2": "{{formattedCount}} постов",
@@ -16,11 +16,11 @@
     "remove_comment": "Удалить комментарий",
     "communities": "Сообщества",
     "users": "Пользователи",
-    "create_a_community": "Создать сообщество",
+    "create_a_community": "Своё сообщество",
     "create_community": "Создать сообщество",
     "remove_community": "Удалить сообщество",
     "subscribed_to_communities": "Подписаны на <1>сообщества</1>",
-    "trending_communities": "В тренде <1>сообществ</1>",
+    "trending_communities": "Последние <1>сообщества</1>",
     "list_of_communities": "Список сообществ",
     "community_reqs": "строчными буквами, подчеркиваниями и без пробелов.",
     "edit": "редактировать",
@@ -175,7 +175,7 @@
     "old_password": "Старый пароль",
     "forgot_password": "забыл пароль",
     "reset_password_mail_sent": "Отправлено электронное письмо для сброса пароля.",
-    "private_message_disclaimer": "Предупреждение: Приватные сообщения Lemmy на данный момент не зашифрованы. Для безопасной коммуникации создайте аккаунт на <1>Element.io</1>.",
+    "private_message_disclaimer": "Предупреждение: Приватные сообщения на данный момент не зашифрованы. Для безопасной коммуникации создайте аккаунт на <1>Element.io</1>.",
     "send_notifications_to_email": "Посылать уведомления на Эл. почту",
     "language": "Язык",
     "browser_default": "Браузера по Умолчанию",
@@ -288,8 +288,8 @@
     "top_month": "Лучшие за месяц",
     "top_year": "Лучшие за год",
     "top_all": "Лучшие за всё время",
-    "join_lemmy": "Присоединиться к Lemmy",
-    "support_lemmy": "Поддержать Lemmy",
+    "join_lemmy": "Присоединиться к Uebishe",
+    "support_lemmy": "Поддержать Uebishe",
     "report_reason_required": "Укажите причину жалобы.",
     "report_too_long": "Жалоба слишком длинная.",
     "couldnt_create_report": "Невозможно создать жалобу.",
@@ -317,7 +317,7 @@
     "only_admins_can_create_communities": "Только администраторы могут создавать сообщества",
     "change_password": "Изменить пароль",
     "password_changed": "Пароль Изменён.",
-    "lemmy_ml_registration_message": "Перед тем, как зарегистрироваться на lemmy.ml, загляните в <1> Joinlemmy </1>, чтобы узнать, есть ли инстанс, который лучше подходит вашему региону, языку или интересам. Lemmy является федеративным, поэтому вы можете взаимодействовать со всем, что видите на lemmy.ml, даже если вы зарегистрированы на другом инстансе.",
+    "lemmy_ml_registration_message": "Перед тем, как зарегистрироваться убедитесь, что ввели свой e-mail, иначе вы не сможете восстановить аккаунт при утере пароля",
     "show_scores": "Показать оценки",
     "bot_account": "Аккаунт бота",
     "show_bot_accounts": "Показать аккаунты ботов",
